--- a/src/input.css
+++ b/src/input.css
@@ -45,7 +45,7 @@ html {
    position: relative;
    width: 800px;
    height: 500px;
-   background: #f9fafb;
+   background: transparent;
  }
  
  .img-slider .slide{
@@ -64,8 +64,8 @@ html {
  .img-slider .slide img{
    z-index: 1;
    width: 100%;
-   border-radius: 10px;
-   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+   border-radius: 5px;
+   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
  }
  
  .img-slider .slide .info{
@@ -73,126 +73,106 @@ html {
    top: 0;
  }
  
- .img-slider .slide .info h2{
-   color: #f9fafb;
-   font-size: 45px;
-   text-transform: uppercase;
-   font-weight: 800;
-   letter-spacing: 2px;
- }
- 
- .img-slider .slide .info p{
-   color: #f9fafb;
-   background: rgba(0, 0, 0, 0.1);
-   font-size: 16px;
-   width: 60%;
-   padding: 10px;
-   border-radius: 4px;
- }
- 
- .img-slider .navigation{
-   z-index: 2;
-   position: absolute;
-   display: flex;
-   bottom: 30px;
-   left: 50%;
-   transform: translateX(-50%);
- }
- 
- .img-slider .navigation .btn{
-   background: #f9fafb;
-   width: 12px;
-   height: 12px;
-   margin: 10px;
-   border-radius: 30%;
-   cursor: pointer;
- }
- 
- .img-slider .navigation .btn.active{
-   background: #2B2B2B;
-   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
- }
- 
- @media (max-width: 2000px){
+ @media (max-width: 4000px){
+  .ha{
+    justify-content: left;
+  }
    .img-slider{
-     width: 600px;
+     width: 100%;
      height: 375px;
    }
  
-   .img-slider .slide .info{
-     padding: 10px 25px;
-   }
- 
-   .img-slider .slide .info h2{
-     font-size: 35px;
-   }
- 
-   .img-slider .slide .info p{
-     width: 70%;
-     font-size: 15px;
-   }
- 
-   .img-slider .navigation{
-     bottom: 40px;
-   }
- 
-   .img-slider .navigation .btn{
-     width: 10px;
-     height: 10px;
-     margin: 8px;
-   }
  }
- 
- @media (max-width: 620px){
+
+ @media (max-width: 1023px){
    .img-slider{
-     width: 400px;
-     height: 250px;
-   }
- 
-   .img-slider .slide .info{
-     padding: 10px 20px;
-   }
- 
-   .img-slider .slide .info h2{
-     font-size: 30px;
-   }
- 
-   .img-slider .slide .info p{
-     width: 80%;
-     font-size: 13px;
-   }
- 
-   .img-slider .navigation{
-     bottom: 15px;
-   }
- 
-   .img-slider .navigation .btn{
-     width: 8px;
-     height: 8px;
-     margin: 6px;
+     width: 100%;
+     height: 700px;
    }
  }
- 
- @media (max-width: 420px){
+
+ @media (max-width: 600px){
    .img-slider{
-     width: 320px;
-     height: 200px;
-   }
- 
-   .img-slider .slide .info{
-     padding: 5px 10px;
-   }
- 
-   .img-slider .slide .info h2{
-     font-size: 25px;
-   }
- 
-   .img-slider .slide .info p{
-     width: 90%;
-     font-size: 11px;
-   }
- 
-   .img-slider .navigation{
-     bottom: 10px;
+     width: 100%;
+     height: 530px;
    }
  }
+
+ @media (max-width: 540px){
+   .img-slider{
+     width: 100%;
+     height: 490px;
+   }
+ }
+
+ @media (max-width: 530px){
+   .img-slider{
+     width: 100%;
+     height: 455px;
+   }
+ }
+
+ @media (max-width: 500px){
+   .img-slider{
+     width: 100%;
+     height: 425px;
+   }
+ }
+
+ @media (max-width: 470px){
+   .img-slider{
+     width: 100%;
+     height: 395px;
+   }
+ }
+
+
+ @media (max-width: 470px){
+   .img-slider{
+     width: 100%;
+     height: 395px;
+   }
+ }
+
+ @media (max-width: 440px){
+   .img-slider{
+     width: 100%;
+     height: 365px;
+   }
+ }
+
+ @media (max-width: 410px){
+   .img-slider{
+     width: 100%;
+     height: 330px;
+   }
+ }
+ 
+ @media (max-width: 380px){
+   .img-slider{
+     width: 100%;
+     height: 305px;
+   }
+ }
+
+ @media (max-width: 360px){
+   .img-slider{
+     width: 100%;
+     height: 285px;
+   }
+ }
+
+ @media (max-width: 330px){
+   .img-slider{
+     width: 100%;
+     height: 255px;
+   }
+ }
+
+ @media (max-width: 300px){
+   .img-slider{
+     width: 100%;
+     height: 225px;
+   }
+ }
+ /*360-380, */
