--- a/src/memorandom.css
+++ b/src/memorandom.css
@@ -31,4 +31,14 @@ body {
 html {
    scroll-behavior: smooth;
    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+html:focus {
+   outline: none !important;
 }
