--- a/src/input.css
+++ b/src/input.css
@@ -76,7 +76,7 @@ html:focus {
    z-index: 1;
    width: 100%;
    border-radius: 5px;
-   box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.5);
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  }
  
  .img-slider .slide .info{
@@ -102,7 +102,21 @@ html:focus {
    }
  }
 
- @media (max-width: 600px){
+ @media (max-width: 768px){
+  .img-slider{
+    width: 100%;
+    height: 590px;
+  }
+}
+
+@media (max-width: 700px){
+  .img-slider{
+    width: 100%;
+    height: 570px;
+  }
+}
+
+ @media (max-width: 610px){
    .img-slider{
      width: 100%;
      height: 530px;
