--- a/src/dafput.css
+++ b/src/dafput.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 .navbar-fixed{
-    @apply fixed z-[9999] bg-white bg-opacity-80;
-    backdrop-filter: blur(7px);
+    @apply fixed z-[9999] bg-[#0c0c0c] bg-opacity-80;
+    backdrop-filter: blur(6px);
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .hamburger-line {
-   @apply w-[30px] h-[2px] my-2 block bg-prim;
+   @apply w-[30px] h-[2px] my-2 block bg-wht;
 }
 
 .hamburger-active > span:nth-child(1) {
